welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:16: error: type mismatch;
 found   : Unit
 required: Int
  if(c==d)
  ^